--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 01OfflineInstallStudioPro/listing.txt
 01OfflineInstallStudioPro/Dependencies
 
-02BLOBSTORE/listing.txt
+02BLOBSTORE/github
 02BLOBSTORE/mendix
